--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>daveBlog</title>
+    <title>daveBlog | {{ page.title }}</title>
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
@@ -22,6 +22,7 @@
 
       </header>
       <section>
+        <h3>{{ page.title }}</h3>
         {{ content }}
       </section>
       <footer>
