--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,10 +25,27 @@
         <h2>{{ page.title }}</h2>
         {{ content }}
       </section>
+
+      <div id="disqus_thread"></div>
+      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
+    <script type="text/javascript">
+        var disqus_shortname = 'fallingcanbedeadly';
+        var disqus_identifier = '{{ page.url }}';
+        var disqus_title = '{{ page.title }}';
+        var disqus_url = 'http://www.fallingcanbedeadly.com{{ page.url }}';
+
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+
     <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
