--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,9 +17,8 @@
       <header>
         <h1>daveBlog</h1>
         <p>Sitting in relative obscurity since 2007&hellip;</p>
-
         <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
-
+        <p class="view"><a href="http://https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
       </header>
       <section>
         <h2>{{ page.title }}</h2>
