--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Site feed">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,6 +20,7 @@
         <p>Sitting in relative obscurity since 2007&hellip;</p>
         <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
         <p class="view"><a href="http://https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
+        <p class="view"><a href="/atom.xml">Site feed</a></p>
       </header>
       <section>
         <h2>{{ page.title }}</h2>
