--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>daveBlog</h1>
+        <h1><a href="/">daveBlog</a></h1>
         <p>Sitting in relative obscurity since 2007&hellip;</p>
         <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
         <p class="view"><a href="http://https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
