Add links to job posting.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@
         <p>Sitting in relative obscurity since 2007&hellip;</p>
         <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
         <p class="view"><a href="http://https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
+        <p class="view"><a href="http://www.logos.com/jobs/SoftwareDeveloper">Come work with me!</a></p>
         <p class="view"><a href="/atom.xml">Site feed</a></p>
       </header>
       <section>
