--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,6 @@
 body {
   padding:50px;
-  font:Helvetica, Arial, sans-serif;
+  font:14px/1.5 Helvetica, Arial, sans-serif;
   color:black;
   font-weight:300;
 }
