--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,26 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>daveBlog | {{ page.title }}</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <title>Mandy's Tech Blog | {{ page.title }}</title>
 
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
-    <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Site feed">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css" />
+    <link
+      rel="alternate"
+      type="application/atom+xml"
+      href="/atom.xml"
+      title="Site feed"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/">daveBlog</a></h1>
+        <h1><a href="/">Mandy's Tech Blog</a></h1>
         <p>Sitting in relative obscurity since 2007&hellip;</p>
-        <p class="view"><a href="https://github.com/david-mitchell">View My GitHub Profile</a></p>
-        <p class="view"><a href="https://twitter.com/theDMitchell">Follow me on Twitter</a></p>
-        <p class="view"><a href="https://www.logos.com/jobs/SoftwareDeveloper">Come work with me!</a></p>
+        <p class="view">
+          <a href="https://github.com/david-mitchell">View My GitHub Profile</a>
+        </p>
+        <p class="view">
+          <a href="https://twitter.com/theDMitchell">Follow me on Twitter</a>
+        </p>
+        <p class="view">
+          <a href="https://gusto.com/about/careers">Come work with me!</a>
+        </p>
         <p class="view"><a href="/atom.xml">Site feed</a></p>
       </header>
       <section>
@@ -30,37 +41,55 @@
 
       <section>
         <div id="disqus_thread"></div>
-        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        <a href="http://disqus.com" class="dsq-brlink"
+          >comments powered by <span class="logo-disqus">Disqus</span></a
+        >
       </section>
 
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>
+          <small
+            >Hosted on GitHub Pages &mdash; Theme by
+            <a href="https://github.com/orderedlist">orderedlist</a></small
+          >
+        </p>
       </footer>
     </div>
     <script type="text/javascript">
-        var disqus_shortname = 'fallingcanbedeadly';
-        var disqus_identifier = '{{ page.url }}';
-        var disqus_title = '{{ page.title }}';
-        var disqus_url = 'http://www.fallingcanbedeadly.com{{ page.url }}';
+      var disqus_shortname = "fallingcanbedeadly";
+      var disqus_identifier = "{{ page.url }}";
+      var disqus_title = "{{ page.title }}";
+      var disqus_url = "http://www.fallingcanbedeadly.com{{ page.url }}";
 
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
+      (function () {
+        var dsq = document.createElement("script");
+        dsq.type = "text/javascript";
+        dsq.async = true;
+        dsq.src = "//" + disqus_shortname + ".disqus.com/embed.js";
+        (
+          document.getElementsByTagName("head")[0] ||
+          document.getElementsByTagName("body")[0]
+        ).appendChild(dsq);
+      })();
     </script>
 
     <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-2133389-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
+    <script type="text/javascript">
+      var gaJsHost =
+        "https:" == document.location.protocol ? "https://ssl." : "http://www.";
+      document.write(
+        unescape(
+          "%3Cscript src='" +
+            gaJsHost +
+            "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"
+        )
+      );
+    </script>
+    <script type="text/javascript">
+      try {
+        var pageTracker = _gat._getTracker("UA-2133389-1");
+        pageTracker._trackPageview();
+      } catch (err) {}
+    </script>
   </body>
 </html>
