--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,9 @@
         <h1><a href="/">Mandy's Tech Blog</a></h1>
         <p>Sitting in relative obscurity since 2007&hellip;</p>
         <p class="view">
-          <a href="https://github.com/david-mitchell">View My GitHub Profile</a>
+          <a href="https://github.com/amanda-mitchell"
+            >View My GitHub Profile</a
+          >
         </p>
         <p class="view">
           <a href="https://twitter.com/theDMitchell">Follow me on Twitter</a>
