--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@
           >
         </p>
         <p class="view">
-          <a href="https://twitter.com/theDMitchell">Follow me on Twitter</a>
+          <a href="https://twitter.com/mandymmitchell">Follow me on Twitter</a>
         </p>
         <p class="view">
           <a href="https://gusto.com/about/careers">Come work with me!</a>
